@@ -1,3 +1,8 @@
+2015-04-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/z88dk.c:
+	  Fix bug number in comment.
+
 2015-04-10 Ben Shi <powerstudio1st AT 163 DOT com>
 	* debugger/mcs51/configure:
 	* debugger/mcs51/Makefile.in:
